--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang = "en">
     <head>
         <style>
+            header{
+                text-align: center;
+            }
             body {
                 background-color: darkgray;
             }
             h1 {
-                color: gold;
+                color: skyblue;
                 text-align: center;
                 font-style: italic;
                 font-size: 50px;
@@ -23,16 +26,16 @@
         <title>Reason's Website</title>
         
     </head>
-    <h1>Rease's Peaces</h1>
+    <h1>Rease's Pieces</h1>
     <header>
         <nav>
             <a href="bio.html">Biography</a>
-
+            <a href="socialmedia.html">Social Media</a>
         </nav>
     </header>
     <body>
         
-        <p>Welcome to my fist website! <br> This is the perfect place to find out about me, Reason Henry. </p>
+        <p>Welcome to my fist website! <br> This is the perfect place to find out about me, Rease Henry. </p>
         <br>
         <br>
         <br>
